--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -129,7 +129,7 @@ SplineTangentScale=0.500000
 LastInViewportMenuLocation=(X=0.000000,Y=0.000000)
 MaterialForDroppedTextures=None
 MaterialParamsForDroppedTextures=()
-EditorViews=(("/Game/LearningKit_Games/Maps/LearningKit_Games_Showcase.LearningKit_Games_Showcase", (LevelViewportsInfo=((CamPosition=(X=-3051.429443,Y=-3046.613037,Z=140.845993),CamOrthoZoom=250.000000),(CamPosition=(X=-3051.429443,Y=-3046.613037,Z=140.845993),CamOrthoZoom=250.000000),(CamPosition=(X=-3051.429443,Y=-3046.613037,Z=140.845993),CamOrthoZoom=250.000000),(CamPosition=(X=2741.781495,Y=-1315.502443,Z=1725.179589),CamRotation=(Pitch=-29.454743,Yaw=-538.135835,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/LearningKit_Games/Maps/LearningKit_Robotics_Showcase.LearningKit_Robotics_Showcase", (LevelViewportsInfo=((CamPosition=(X=-10751.246094,Y=-7094.202148,Z=3455.934082),CamOrthoZoom=53450.355469),(CamPosition=(X=-10751.246094,Y=-7094.202148,Z=3455.934082),CamOrthoZoom=53450.355469),(CamPosition=(X=-10751.246094,Y=-7094.202148,Z=3455.934082),CamOrthoZoom=53450.355469),(CamPosition=(X=-5077.708060,Y=-1126.523754,Z=4035.231332),CamRotation=(Pitch=-27.940882,Yaw=4.817643,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/MiniAdventure/Maps/MiniAdventure.MiniAdventure", (LevelViewportsInfo=((),(),(),(CamPosition=(X=468.297501,Y=110.000000,Z=320.000000),CamRotation=(Pitch=7.200000,Yaw=77.200001,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
+EditorViews=(("/Game/LearningKit_Games/Maps/LearningKit_Games_Showcase.LearningKit_Games_Showcase", (LevelViewportsInfo=((CamPosition=(X=-3051.429443,Y=-3046.613037,Z=140.845993),CamOrthoZoom=250.000000),(CamPosition=(X=-3051.429443,Y=-3046.613037,Z=140.845993),CamOrthoZoom=250.000000),(CamPosition=(X=-3051.429443,Y=-3046.613037,Z=140.845993),CamOrthoZoom=250.000000),(CamPosition=(X=2741.781495,Y=-1315.502443,Z=1725.179589),CamRotation=(Pitch=-29.454743,Yaw=-538.135835,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/LearningKit_Games/Maps/LearningKit_Robotics_Showcase.LearningKit_Robotics_Showcase", (LevelViewportsInfo=((CamPosition=(X=-10751.246094,Y=-7094.202148,Z=3455.934082),CamOrthoZoom=53450.355469),(CamPosition=(X=-10751.246094,Y=-7094.202148,Z=3455.934082),CamOrthoZoom=53450.355469),(CamPosition=(X=-10751.246094,Y=-7094.202148,Z=3455.934082),CamOrthoZoom=53450.355469),(CamPosition=(X=-5077.708060,Y=-1126.523754,Z=4035.231332),CamRotation=(Pitch=-27.940882,Yaw=4.817643,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/MiniAdventure/Maps/MiniAdventure.MiniAdventure", (LevelViewportsInfo=((),(),(),(CamPosition=(X=-509.041868,Y=-1143.890492,Z=464.029293),CamRotation=(Pitch=-17.800000,Yaw=45.000001,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 PropertyColorationColorForMatchingObjects=(B=0,G=0,R=255,A=255)
 
 [MRU]
@@ -138,7 +138,7 @@ MRUItem1=/Game/LearningKit_Games/Maps/LearningKit_Robotics_Showcase
 MRUItem2=/Game/LearningKit_Games/Maps/LearningKit_Games_Showcase
 
 [ContentBrowser]
-ContentBrowserDrawer.SelectedPaths=/Game/MiniAdventure/Maps
+ContentBrowserDrawer.SelectedPaths=/Game/LearningKit_Games/Assets/Environment/Islands
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
@@ -148,7 +148,7 @@ ContentBrowserDrawer.CollectionAreaExpanded=False
 ContentBrowserDrawer.FavoritesSearchAreaExpanded=False
 ContentBrowserDrawer.PathSearchAreaExpanded=False
 ContentBrowserDrawer.CollectionSearchAreaExpanded=False
-ContentBrowserDrawer.VerticalSplitter.FixedSlotSize0=150
+ContentBrowserDrawer.VerticalSplitter.FixedSlotSize0=232
 ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
@@ -160,18 +160,24 @@ ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
+ContentBrowserDrawer.JumpMRU=/All/Game/LearningKit_Games/Assets/Environment/Islands
+ContentBrowserDrawer.JumpMRU=/All/Game/LearningKit_Games/Assets/Environment
+ContentBrowserDrawer.JumpMRU=/All/Game/LearningKit_Games/Assets
+ContentBrowserDrawer.JumpMRU=/All/Game/LearningKit_Games
 ContentBrowserDrawer.JumpMRU=/All/Game/MiniAdventure/Maps
 ContentBrowserDrawer.JumpMRU=/All/Game/MiniAdventure/새 폴더
 ContentBrowserDrawer.JumpMRU=/All/Game/MiniAdventure
 ContentBrowserDrawer.JumpMRU=/All/Game/새 폴더
 ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All
-ContentBrowserDrawer.JumpMRU=/All/Game/LearningKit_Games
 ContentBrowserDrawer.JumpMRU=/All/Game/LearningKit_Games/Maps
 ContentBrowserDrawer.JumpMRU=/All/Game/Hour_of_Code
 ContentBrowserDrawer.JumpMRU=/All/Game/BlockGame
 ContentBrowserDrawer.JumpMRU=/All/Game/BlockGame/Maps
 ContentBrowserDrawer.JumpMRU=/All/Game/LearningKit_Robots
+AssetPropertyPicker.ThumbnailSize=2
+AssetPropertyPicker.CurrentViewType=0
+AssetPropertyPicker.ZoomScale=0
 
 [EditorStartup]
 LastLevel=/Game/MiniAdventure/Maps/MiniAdventure
@@ -179,9 +185,9 @@ LastLevel=/Game/MiniAdventure/Maps/MiniAdventure
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=
 
 [PlacementMode]
+RecentlyPlaced=/Game/LearningKit_Games/Assets/Environment/Islands/SM_FloatingIsland_L.SM_FloatingIsland_L;
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Script/Engine.SkyAtmosphere;/Engine/Transient.ActorFactorySkyAtmosphere_0
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_19
@@ -264,9 +270,26 @@ SkyLight.Actor=True
 Actor.TransformCommon=True
 Actor.Networking=True
 Actor.Actor=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Mesh Painting=True
+StaticMeshActor.HLOD=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Networking=True
+StaticMeshActor.Actor=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 
